@@ -1,6 +1,7 @@
-unsupported-membership-test:29:9:29:25:test:Value 'NonIterableClass' doesn't support membership test:UNDEFINED
-unsupported-membership-test:30:9:30:28:test:Value 'OldNonIterableClass' doesn't support membership test:UNDEFINED
-unsupported-membership-test:31:9:31:26:test:Value 'NonContainerClass' doesn't support membership test:UNDEFINED
-unsupported-membership-test:32:9:32:27:test:Value 'NonIterableClass()' doesn't support membership test:UNDEFINED
-unsupported-membership-test:33:9:33:30:test:Value 'OldNonIterableClass()' doesn't support membership test:UNDEFINED
-unsupported-membership-test:34:9:34:28:test:Value 'NonContainerClass()' doesn't support membership test:UNDEFINED
+unsupported-membership-test:38:9:38:25:test:Value 'NonIterableClass' doesn't support membership test:UNDEFINED
+unsupported-membership-test:39:9:39:28:test:Value 'OldNonIterableClass' doesn't support membership test:UNDEFINED
+unsupported-membership-test:40:9:40:26:test:Value 'NonContainerClass' doesn't support membership test:UNDEFINED
+unsupported-membership-test:41:9:41:27:test:Value 'NonIterableClass()' doesn't support membership test:UNDEFINED
+unsupported-membership-test:42:9:42:30:test:Value 'OldNonIterableClass()' doesn't support membership test:UNDEFINED
+unsupported-membership-test:43:9:43:28:test:Value 'NonContainerClass()' doesn't support membership test:UNDEFINED
+unsupported-membership-test:44:9:44:39:test:Value 'MultipleAssignmentNonesClass()' doesn't support membership test:UNDEFINED
